# product_price_agent

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  start.bat  test_agent1.py  test_agent2.py  test_agent3.py
backend/: .env.example  pyproject.toml
backend/src/: config.py  main.py  utils.py
backend/src/agents/: comparison_advisor.py  price_researcher.py  product_parser.py
backend/src/db/: database.py  repository.py
backend/src/graph/: state.py  workflow.py
backend/src/prompts/: comparison_advisor.py  product_parser.py
backend/src/tools/: duckduckgo_search.py  extract_price.py  history_lookup.py  hybrid_search.py  search_price.py  serpapi_search.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: PriceTable.vue  ProductCard.vue  ProgressPanel.vue  Recommendation.vue  SearchInput.vue  TrendChart.vue
frontend/src/composables/: useAnalysis.ts
frontend/src/styles/: main.css
frontend/src/types/: index.ts
