[project]
name = "price-analysis-agent"
version = "0.1.0"
description = "多平台商品价格智能分析助手 — 基于 LangGraph 的多 Agent 协作系统"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.0",
    "openai>=1.12.0",
    "uvicorn[standard]>=0.32.0",
    "loguru>=0.7.3",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
